# game-engine

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt
defaultExecutable/: CMakeLists.txt
defaultExecutable/source/: Main.cpp
dependencies/: CMakeLists.txt
dependencies/include/glad/: glad.h
dependencies/include/imgui/: imconfig.h
dependencies/include/lua/: luaconf.h
dependencies/lib/lua/: luaLib.lib
dependencies/lib/physx/: LowLevelAABB_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXCooking_64.lib  PhysXFoundation_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib  SceneQuery_static_64.lib
editor/: CMakeLists.txt
editor/include/: EditorCamera.h  Example.h  Input.h  Picking.h
editor/include/mathsTests/: TransformTest.h
editor/include/ui/: AssetDetails.h  Assets.h  EditorApplication.h  MenuBar.h  Properties.h  ResourceVizualizer.h  SceneGraph.h  Viewport.h
editor/include/ui/components/: AudioComponent.h  CameraComponent.h  Component.h  LightSourceComponent.h  NavigationPointComponent.h  RendererComponent.h  RigidBodyDynamicComponent.h  RigidBodyStaticComponent.h  ScriptComponent.h  Transform.h  TransformComponent.h  TriangleMeshComponent.h
editor/include/ui/gizmos/: Gizmos.h  GizmosUI.h  RotationGizmos.h  ScaleGizmos.h  TranslationGizmos.h
editor/source/: EditorCamera.cpp  Example.cpp  Input.cpp  Main.cpp  Picking.cpp
editor/source/mathsTests/: TransformTest.cpp
editor/source/ui/: AssetDetails.cpp  Assets.cpp  EditorApplication.cpp  MenuBar.cpp  Properties.cpp  ResourceVizualizer.cpp  SceneGraph.cpp  Viewport.cpp
editor/source/ui/components/: AudioComponent.cpp  CameraComponent.cpp  Component.cpp  LightSourceComponent.cpp  NavigationPointComponent.cpp  RendererComponent.cpp  RigidBodyDynamicComponent.cpp  RigidBodyStaticComponent.cpp  ScriptComponent.cpp  Transform.cpp  TransformComponent.cpp  TriangleMeshComponent.cpp
editor/source/ui/gizmos/: Gizmos.cpp  GizmosUI.cpp  RotationGizmos.cpp  ScaleGizmos.cpp  TranslationGizmos.cpp
engine/: CMakeLists.txt
engine/include/: EngineExport.h
engine/include/engine/: CoreTypes.h  Window.h
engine/include/engine/camera/: Camera.h  CameraV2.h
engine/include/engine/core/: Component.h  ComponentArray.h  Entity.h  SceneGraph.h  TypesECS.h
engine/include/engine/input/: Input.h  InputData.h
engine/include/engine/model/: Buffer.h  Mesh.h  Model.h  Vertex.h
engine/include/engine/physics/: PhysicsEngine.h  PhysicsSystem.h
engine/include/engine/resource/: Resource.h  ResourceManager.h
engine/include/engine/scripting/: CameraFunctions.h  EntityScriptFunctions.h  InputFunctions.h  ScriptFunctions.h  ScriptObject.h  TransformFunctions.h
engine/include/engine/serialization/: TextSerializer.h
engine/include/engine/thread/: ThreadManager.h
engine/include/engine/ui/: Canvas.h  UIElement.h  UIManager.h  Viewport.h
engine/include/engine/utility/: FileData.h  MemoryCheck.h  Timer.h
engine/include/maths/: Transform.h
engine/include/private/: InternalOpenGLError.hpp
engine/include/private/gameExecutable/: ExecutableFunctions.h
engine/include/private/input/: InputCallbacks.h
engine/include/private/physics/: IgnoreTriggersFilterCallback.hpp  InternalPhysXStruct.hpp  InternalPhysxDebugDraw.h  InternalPhysxDebugDraw.hpp  InternalPhyxConversion.hpp  SimulationEventCallback.h
engine/include/private/scripting/: CameraFunctions.h  EngineScriptFunctions.h  ResourceFunctions.h  ScriptFunctions.h
engine/include/private/serialization/: TextSerializer.h
engine/include/private/sounds/: InternalFmodConversion.hpp  InternalSoundsStruct.hpp
engine/include/private/ui/: InternalUIColor.h  InternalUIComponent.h  InternalUIDragDrop.h  InternalUIDraw.h  InternalUIStyle.h  InternalUIText.h  InternalUITree.h  InternalUIWindow.h
engine/include/private/window/: WindowLib.h
engine/include/public/engine/: ConsoleLog.hpp  CoreTypes.h  Engine.h  EngineExport.h  Window.h
engine/source/: Camera.cpp  CameraV2.cpp  Engine.cpp  Input.cpp  Main.cpp  Monitor.cpp  Timer.cpp  Window.cpp
engine/source/core/: Component.cpp  Entity.cpp  SceneGraph.cpp  k1zbtnt2.tib~
engine/source/core/components/: Camera.cpp  LightSource.cpp  NavigationPoint.cpp  Renderer.cpp  Script.cpp  Transform.cpp
engine/source/core/systems/: ScriptSystem.cpp
engine/source/game/: GameScene.cpp
engine/source/gameExecutable/: ExecutableFunctions.cpp
engine/source/input/: Input.cpp  InputCallbacks.cpp  InputHandler.cpp
engine/source/maths/: Transform.cpp
engine/source/model/: Buffer.cpp  Mesh.cpp  Model.cpp
engine/source/physics/: ICollisionListener.cpp  InternalPhysxDebugDraw.cpp  Material.cpp  PhysicsEngine.cpp  PhysicsMaterial.cpp  PhysicsSystem.cpp  Raycast.cpp  SimulationEventCallback.cpp  TriangleMesh.cpp
engine/source/physics/geometry/: BoxGeometry.cpp  Geometry.cpp  GeometryTest.cpp
engine/source/physics/rigidbody/: RigidBodyDynamic.cpp  RigidBodyStatic.cpp
engine/source/resource/: ResourceManager.cpp
engine/source/resource/animation/: Animation.cpp  SkeletonAnimator.cpp
engine/source/resource/font/: Font.cpp
engine/source/resource/material/: MeshMaterial.cpp
engine/source/resource/model/: Buffer.cpp  DynamicMesh.cpp  (+2 more)
engine/source/sceneGraphViewer/: SceneGraphUI.cpp
engine/source/scripting/: CameraFunctions.cpp  ComponentFunctions.cpp  EntityScriptFunctions.cpp  InputFunctions.cpp  ResourceFunctions.cpp  ScriptFunctions.cpp  ScriptObject.cpp  TransformFunctions.cpp
engine/source/serialization/: TextSerializer.cpp
engine/source/sounds/: AudioPlayer.cpp  PlayerAudio.cpp  Sound.cpp  SoundEngine.cpp  SoundsEngine.cpp
engine/source/thread/: ThreadManager.cpp
engine/source/ui/: Application.cpp  Canvas.cpp  UIElement.cpp  UIManager.cpp  UITable.cpp  UIToolbar.cpp  UIWindow.cpp
engine/source/utility/: FrameBuffer.cpp  GizmosTest.cpp  GraphicsHelperFunctions.cpp  Platform.cpp  ResourceContainer.cpp  Timer.cpp
engine/source/viewport/: FrameBuffer.cpp  Viewport.cpp
engine/source/window/: Window.cpp  WindowImpl.cpp
librairies/: CMakeLists.txt
(+340 files in other folders)
